--- a/YetNguyen-Final-STAT544-Spring2014.Rnw
+++ b/YetNguyen-Final-STAT544-Spring2014.Rnw
@@ -1,5 +1,5 @@
 
-\documentclass{article}
+\documentclass[10pt]{article}
 % \usepackage[sc]{mathpazo}
 % \usepackage[T1]{fontenc}
 \usepackage{geometry}
@@ -18,9 +18,9 @@
 \usepackage{psfrag}
 \usepackage{epsfig,epsf}
 \usepackage{pstricks}
-\geometry{verbose,tmargin=2.5cm,bmargin=2.5cm,lmargin=2.5cm,rmargin=2.5cm}
-\setcounter{secnumdepth}{2}
-\setcounter{tocdepth}{2}
+% \geometry{verbose,tmargin=2.5cm,bmargin=2.5cm,lmargin=2.5cm,rmargin=2.5cm}
+% \setcounter{secnumdepth}{2}
+% \setcounter{tocdepth}{2}
 \usepackage{url}
 \usepackage[unicode=true,pdfusetitle,
             bookmarks=true,bookmarksnumbered=true,bookmarksopen=true,bookmarksopenlevel=2,
@@ -100,7 +100,7 @@ P(\tau_j \mbox{ is signal }|y) \approx \frac {1}{M} \sum_{i=1}^M  \big(
 \end{equation}
 where $(\sigma_{\tau_j}^{2(i)}, i = 1, \dots, M)$ is the posterior MCMC sample of $\sigma_{\tau_j}^{2}$. 
 
-This metric rule is a modified threshold rule motivated from section 3.4 Thresholding in the paper "The Horseshoe Estimator for Sparse Signals" by Carlos M. Carvalho and Nicholas G. Polson, Biometrika (2010), 97 ,2, pp. 465–480  \url{http://biomet.oxfordjournals.org/content/97/2/465.full.pdf}. Note that the paper use the normal distribution setting which is different from the Poission
+This metric rule is a modified threshold rule motivated from section 3.4 Thresholding in the paper "The Horseshoe Estimator for Sparse Signals" by Carlos M. Carvalho and Nicholas G. Polson, Biometrika (2010), 97 ,2, pp. 465–480  \url{http://ejournals.ebsco.com.proxy.lib.iastate.edu/Direct.asp?AccessToken=95M5JIX8XM9EEE91IJKU1JMX5I1D8DM4Q&Show=Object}. Note that the paper use the normal distribution setting which is different from the Poission
 distribution setting of this project. 
  
 \item Metric 2: We  estimate the posterior probability of signal of gene $j$ for both models (\ref{eq1}) and (\ref{eq2}) by
@@ -117,9 +117,9 @@ in simulated dataset. Based on the simulation results, we will pick up the
 better model to analyze RFI data. For the purpose of this project, we will 
 analyze first 200 genes of the original RNA-Seq dataset.
 
-\section {Model in JAGS}
-Below is the JAGS code for two models above. 
-<<modelm_pointmass_mixture, tidy=FALSE, results='hide',echo=TRUE, message=FALSE,warning=FALSE>>=
+% \section {Model in JAGS}
+% Below is the JAGS code for two models above. 
+<<modelm_pointmass_mixture, tidy=FALSE, results='hide',echo=FALSE, message=FALSE,warning=FALSE>>=
 library(rjags)
 library(xtable)
 #############modelm - using point mass mixture prior for signals###############
@@ -151,7 +151,7 @@ sigmabeta ~ dunif(0,100)
 @
 
 
-<<horseshoe_prior, tidy=FALSE, results='hide',echo=TRUE, message=FALSE,warning=FALSE>>=
+<<horseshoe_prior, tidy=FALSE, results='hide',echo=FALSE, message=FALSE,warning=FALSE>>=
 #########modelh - using horseshoe prior for the signals##############
 modelh <- "
 model{
@@ -176,21 +176,26 @@ sigmabeta ~ dt(0, 1, 1) T(0,)
 @
 
 
-\section{Evaluation models using simulation data}
+\section{Evaluation two models using simulation data}
 
-We simulate data to evaluate the performance of the two models. For simplicity, 
-we simulate a count table with dimension $100\times 24$ where 100 rows corresponding to 
-100 genes, first 12 columns coresponding to line 1, the next 12 colums corresponding to 
-line 2, as well as 24 covariate $x_{jk} \sim N(0,1)$. The element of count table at row $j$, colum $k$ is simulated from $Poisson(\lambda_{jk})$ where 
+We simulate data to evaluate the performance of the two models in detecting true signals. For simplicity, 
+we simulate a count table with dimension $100\times 24$ where each row corresponding to 
+one gene, first 12 columns coresponding to line 1, the next 12 colums corresponding to 
+line 2. Also, we simulate 24 covariates $x_{k} \sim N(0,1)$ for $k = 1,\dots, 24$. The $(j,k)-$ element of the count table is simulated from $Poisson(\lambda_{jk})$ distribution, where 
 \begin{align*}
-\lambda_{jk} &= \alpha_j -\tau_j + \beta_j x_{jk} ,\quad \mbox{for }\quad k = 1,\dots, 12\\
-\lambda_{jk} &= \alpha_j +\tau_j + \beta_j x_{jk} ,\quad \mbox{for }\quad k = 13,\dots, 24\\
+\lambda_{jk} &= \alpha_j -\tau_j + \beta_j x_{k} ,\quad \mbox{for }\quad k = 1,\dots, 12\\
+\lambda_{jk} &= \alpha_j +\tau_j + \beta_j x_{k} ,\quad \mbox{for }\quad k = 13,\dots, 24\\
 \alpha_j     & \sim N(3,2^2) \quad \mbox{for}\quad j = 1,\dots, 50\\
 \tau_j       &= (1-Bern(0.8))*N(\mu_\tau,0.25^2) \quad \mu_\tau \in \{0.5, 1, 2\} \\
 \beta_j      &=  (1-Bern(0.8))*N(\mu_\beta,0.25^2) \quad \mu_\beta \in \{0.5, 1, 2\}.
 \end{align*}
+In summary, we have total $3\times 3 = 9$ different simulation scenarios. Each simulation scenario 
+coresponds to one pairs of value 
+$$
+(\mu_\tau, \mu_\beta) \in \{(0.5, 0.5), (0.5, 1), (0.5, 2), (1, 0.5), (1, 1), (1, 2), (2, 0.5), (2, 1), (2, 2) \}.
+$$
 
-<<simulation_data, tidy=FALSE,results='hide',echo=TRUE, message=FALSE,warning=FALSE>>=
+<<simulation_data, tidy=FALSE,results='hide',echo=FALSE, message=FALSE,warning=FALSE>>=
 library(reshape)
 sim_data <- function(K, ngene, mualpha, sigmaalpha, 
                      pitau,mutau, sigmatau, pibeta,
@@ -230,11 +235,36 @@ sim_data <- function(K, ngene, mualpha, sigmaalpha,
 }
 
 @
-\section{Running two JAGS models for simulation data}
-Next, we run a MCMC using the point mass mixture model and horseshoe prior model. In the function below, we will calculate the estimated posterior probability of 
-signal of $\tau_j$ for each $j$ based on two different evaluation rules \ref{ev1m}, \ref{ev2} for point mass mixture prior model \ref{eq1}, and based on two different evaluation rules \ref{ev1h}, \ref{ev2} for horseshoe prior model \ref{eq2}. 
+% \section{Running two JAGS models for simulation data}
+For each simulation scenario, we simultaneously run a MCMC  for the model (\ref{eq1}) which is the point mass mixture prior model and the model (\ref{eq2}) which is the horseshoe prior model. Then, we calculate the estimated posterior probability of 
+signal of $\tau_j$ for each $j$ based on two different evaluation metrices 
+introduced in Section 2. In particular, with respect to metric 2, we use threshold $\varepsilon = 2\mu_\tau/3$ where $\mu_\tau$ is the corresponding 
+$\mu_\tau$ of the simulation scenario. 
 
-<<run_mm_simulationdata,cache=TRUE, tidy=FALSE>>=
+\begin{table}[ht]
+\centering
+\begin{tabular}{rrrrrrrrrr}
+\hline
+& (0.5,0.5) & (0.5,1) & (0.5,2) & (1,0.5) & (1,1) & (1,2) & (2,0.5) & (2,1) & (2,2) \\
+\hline
+(\ref{eq1})(\ref{ev1m}) & 19(16) & 20(20) & 20(20) & 26(26) & 28(27) & 24(24) & 19(19) & 16(16) & 17(17) \\
+% mm.c.est.DE.tau & 16 & 20 & 20 & 26 & 27 & 24 & 19 & 16 & 17 \\
+(\ref{eq2})(\ref{ev1h}) & 2(2) & 0(0) & 0(0) & 6(6) & 9(9) & 7(7) & 19(19) & 15(15) & 17(17) \\
+% mh.c.est.DE.tau & 2 & 0 & 0 & 6 & 9 & 7 & 19 & 15 & 17 \\
+(\ref{eq1})(\ref{ev2}) & 15(14) & 14(14) & 15(15) & 23(23) & 23(23) & 20(20) & 19(19) & 15(15) & 17(17) \\
+% mm.c.est.DE.tau.eps & 14 & 14 & 15 & 23 & 23 & 20 & 19 & 15 & 17 \\
+(\ref{eq2})(\ref{ev1m}) & 12(12) & 12(12) & 14(14) & 21(21) & 23(23) & 20(20) & 19(19) & 15(15) & 17(17) \\
+% mh.c.est.DE.tau.eps & 12 & 12 & 14 & 21 & 23 & 20 & 19 & 15 & 17 \\
+signals & 20 & 22 & 22 & 26 & 27 & 25 & 19 & 16 & 17 \\
+\hline
+\end{tabular}
+\caption{Results of detecting signals of two models (\ref{eq1}) and (\ref{eq2})
+in 9 simulation scenarios. The explanation of the table as below. Each column name is the value of $(\mu_\tau, \mu_\beta)$. Each rowname is specification of model and metric. Each element of the table indicate the number of detected signals and the number of correctly detected signals.  For example the first row "(\ref{eq1})(\ref{ev1m})" indicates model $(\ref{eq1})$ and metric $\ref{ev1m}$. The element at first row "(\ref{eq1})(\ref{ev1m})" and first column of table "19(16)" indicate the 
+}
+\end{table}
+
+
+<<run_mm_simulationdata,cache=TRUE, tidy=FALSE,echo=FALSE>>=
 out <- function(K, ngene, mualpha, sigmaalpha, 
                      pitau,mutau, sigmatau, pibeta,
                      mubeta, sigmabeta, epstau, epsbeta){
@@ -290,7 +320,7 @@ out <- function(K, ngene, mualpha, sigmaalpha,
 @
 
 
-<<run_sim,cache=TRUE,message=FALSE,results='hide'>>=
+<<run_sim,cache=TRUE,message=FALSE,results='hide',echo=FALSE>>=
 K <- 12
 
 ngene <- 100
@@ -315,9 +345,41 @@ for(i in 1:3){
 }
 
 @
-Results are below, where each 
+% Results are below, where each 
+% 
+% <<results='asis', tidy = FALSE,echo=FALSE>>=
+% res <- cbind(post_out[1,1,],
+%             post_out[1,2,],
+%             post_out[1,3,],
+%             post_out[2,1,],
+%             post_out[2,2,],
+%             post_out[2,3,],
+%             post_out[3,1,],
+%             post_out[3,2,],
+%             post_out[3,3,])
+% colnames(res) <- c("$\\alpha_1$ (0.5,0.5)", "(0.5,1)", "(0.5,2)", 
+%               "(1,0.5)", "(1,1)", "(1,2)", 
+%               "(2,0.5)", "(2,1)", "(2,2)")
+% 
+% 
+% rownames(res) <- c("$\\alpha_1$","mm.c.est.DE.tau",
+%                     "mh.est.DE.tau","mh.c.est.DE.tau",
+%                    "mm.est.DE.tau.eps","mm.c.est.DE.tau.eps",
+%                    "mh.est.DE.tau.eps","mh.c.est.DE.tau.eps",
+%                     "true.DE.tau")
+% 
+% @
+% 
+% <<results='asis'>>=
+% library(xtable)
+% adf.results<-matrix(0,ncol=6,nrow=4)
+% colnames(adf.results) <- c(" ", "$m^r_t$", "$\\delta p_t$","$R^r_t$", "$R^b_t$", "$y^r_t$")
+% print(xtable(adf.results, caption = "xx $\\alpha_1$"),sanitize.text.function=function(x){x})
+% @
 
-<<results='asis', tidy = FALSE>>=
+Results of two models for estimating signal $\tau's$.
+<<restau2>>=
+library(xtable)
 res <- cbind(post_out[1,1,],
             post_out[1,2,],
             post_out[1,3,],
@@ -327,25 +389,20 @@ res <- cbind(post_out[1,1,],
             post_out[3,1,],
             post_out[3,2,],
             post_out[3,3,])
-colnames(res) <- c("(0.5,0.5)", "(0.5,1)", "(0.5,2)", 
+class(res)
+colnames(res) <- c("$\\alpha_1$ (0.5,0.5)", "(0.5,1)", "(0.5,2)", 
               "(1,0.5)", "(1,1)", "(1,2)", 
               "(2,0.5)", "(2,1)", "(2,2)")
 
 
-rownames(res) <- c("mm.est.DE.tau","mm.c.est.DE.tau",
+rownames(res) <- c("$\\alpha_1$","mm.c.est.DE.tau",
                     "mh.est.DE.tau","mh.c.est.DE.tau",
                    "mm.est.DE.tau.eps","mm.c.est.DE.tau.eps",
                    "mh.est.DE.tau.eps","mh.c.est.DE.tau.eps",
                     "true.DE.tau")
 
-@
-
-
-Results of two models for estimating signal $\tau's$.
-
-<<restau,results='asis',tidy=FALSE>>=
-xtable(res, digit = 0, caption = "The meaning of rownames: mm stands for mixture 
-       prior, mh stands for horseshoe prior.
+print(xtable(res, digit = 0, caption = "The meaning of rownames: mm stands for mixture 
+       prior, mh stands for horseshoe prior.$\\alpha_1$
        mm.est.DE.tau is the  number of estimated signal tau when using pointmass 
        mixture prior (mm).
        mm.c.est.DE.tau is the number of correctly estimated singal taus when using
@@ -356,7 +413,45 @@ xtable(res, digit = 0, caption = "The meaning of rownames: mm stands for mixture
        signal tau when using pointmass mixture prior and the second metric.
        true.DE.tau is the true number of signal taus (we know this because of
        simulation). 
-       ")
+       "),sanitize.text.function=function(x){x})
+@
+
+<<restau,results='asis'>>=
+library(xtable)
+res <- cbind(post_out[1,1,],
+            post_out[1,2,],
+            post_out[1,3,],
+            post_out[2,1,],
+            post_out[2,2,],
+            post_out[2,3,],
+            post_out[3,1,],
+            post_out[3,2,],
+            post_out[3,3,])
+class(res)
+colnames(res) <- c("$\\alpha_1$ (0.5,0.5)", "(0.5,1)", "(0.5,2)", 
+              "(1,0.5)", "(1,1)", "(1,2)", 
+              "(2,0.5)", "(2,1)", "(2,2)")
+
+
+rownames(res) <- c("$\\alpha_1$","mm.c.est.DE.tau",
+                    "mh.est.DE.tau","mh.c.est.DE.tau",
+                   "mm.est.DE.tau.eps","mm.c.est.DE.tau.eps",
+                   "mh.est.DE.tau.eps","mh.c.est.DE.tau.eps",
+                    "true.DE.tau")
+
+print(xtable(res, digit = 0, caption = "The meaning of rownames: mm stands for mixture 
+       prior, mh stands for horseshoe prior.$\\alpha_1$
+       mm.est.DE.tau is the  number of estimated signal tau when using pointmass 
+       mixture prior (mm).
+       mm.c.est.DE.tau is the number of correctly estimated singal taus when using
+       pointmass mixture prior.
+       mm.est.DE.tau.eps is the number of estimated signal tau when using pointmass 
+       mixture prior and the second metric (varepsilon).
+       mm.c.est.DE.tau.eps is the number of correctly estimated 
+       signal tau when using pointmass mixture prior and the second metric.
+       true.DE.tau is the true number of signal taus (we know this because of
+       simulation). 
+       "),sanitize.text.function=function(x){x})
 @
 
 
@@ -366,7 +461,7 @@ Based on the above classification criterions,  the results show that the point m
 
 Moreover, by checking the plots of posterior densitiies of $\tau_j$, we also have the same conclusion. Below is  the plots obtained from an analysis based on a simulation data. 
 
-<<plotsim,cache=TRUE,results='hide'>>=
+<<plotsim,cache=TRUE,results='hide',echo=FALSE>>=
 K <- 12
 
 ngene <- 5
@@ -395,13 +490,13 @@ mh <- jags.model(textConnection(modelh), data[1:5] ,n.chains = 1)
 @
 
 Plot of posterior sample for $\tau_j$ when using point mass mixture model
-<<plottau_mm,fig.pos='H'>>=
+<<plottau_mm,fig.pos='H',echo=FALSE>>=
 data$tau
 plot(resm[, paste("tau[",1:ngene,"]",sep ="")])
 @
 
 Below is the dianogstic plots acf of the posterior samples
-<<acf,fig.pos='H'>>=
+<<acf,fig.pos='H',echo=FALSE>>=
 par(mfrow = c(3,2))
 acf(resm[[1]][,"tau[1]"], main = "tau1")
 acf(resm[[1]][,"tau[2]"], main = "tau2")
@@ -413,13 +508,13 @@ acf(resm[[1]][,"tau[5]"], main = "tau5")
 
 
 Plot of posterior sample for $\tau_j$ when using horseshoe prior model
-<<plottau_mh,fig.pos='H'>>=
+<<plottau_mh,fig.pos='H',echo=FALSE>>=
 data$tau
 plot(resh[, paste("tau[",1:ngene,"]",sep ="")])
 @
 
 Below is the dianogstic plots acf of the posterior samples
-<<acfh,fig.pos='H'>>=
+<<acfh,fig.pos='H',echo=FALSE>>=
 par(mfrow = c(3,2))
 acf(resh[[1]][,"tau[1]"], main = "tau1")
 acf(resh[[1]][,"tau[2]"], main = "tau2")
@@ -432,21 +527,21 @@ acf(resh[[1]][,"tau[5]"], main = "tau5")
 \section{Analyze RFI data}
 
 As mentioned before, we only analyze 200 genes in the RNASeq - RFI data set. Below is the analysis of the data using the point mass mixture prior Poission model.
-<<realdata,cache = TRUE,results='hide'>>=
+<<realdata,cache = TRUE,results='hide',echo=FALSE>>=
 load("data.RData")
 mm <- jags.model(textConnection(modelm), data,n.chains = 1)
 resm <- coda.samples(mm, c("tau","beta", "alpha", "bintau", "binbeta"), 2000) 
 @
 
 Let's look at plots of some posterior samples of $\tau_i$
-<<fig.pos='H'>>=
+<<fig.pos='H',echo=FALSE>>=
 plot(resm[, paste("tau[",c(1:4),"]",sep ="")])
 
 
 @
 
 Number of signal genes if we choose the evaluation rule \ref{ev1m} 
-<<tidy=FALSE>>=
+<<tidy=FALSE,echo=FALSE>>=
 mm_tau_est <- which(apply(resm[[1]][,paste("bintau[", 1:200,"]",sep ="")], 2, 
       function(x) mean(abs(1-x))) > 0.5)
 length(mm_tau_est)
